--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -18,10 +18,10 @@ name: Fortify AST Scan
 # Customize trigger events based on your DevSecOps process and/or policy
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "master" ]
+    branches: [ "main" ]
   schedule:
     - cron: '36 7 * * 5'
   workflow_dispatch:
