--- a/.github/workflows/fortify1.yml
+++ b/.github/workflows/fortify1.yml
@@ -43,11 +43,16 @@ jobs:
 
       # Java is required to run the various Fortify utilities.
       # When scanning a Java application, please use the appropriate Java version for building your application.
-      - name: Setup Java
+      # - name: Setup Java
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: 11
+      #     distribution: 'zulu'
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: 11
-          distribution: 'zulu'
+          java-version: '17'
+          distribution: 'adopt'      
       - name: Run Bash script
         run: ls -ltrh           
 
