--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -27,3 +27,18 @@ jobs:
           cache: maven
       - name: Build with Maven Wrapper
         run: ./mvnw -B package
+      - name: "Run analysis"
+      - uses: ossf/scorecard-action@62b2cac7ed8198b15735ed49ab1e5cf35480ba46 # v2.4.0
+        with:
+          results_file: results.sarif
+          results_format: sarif
+         # Scorecard team runs a weekly scan of public GitHub repos,
+         # see https://github.com/ossf/scorecard#public-data.
+         # Setting `publish_results: true` helps us scale by leveraging your workflow to
+         # extract the results instead of relying on our own infrastructure to run scans.
+          publish_results: true
+     # Commenting out will disable upload of results to your repo's Code Scanning dashboard
+      - name: "Upload to code-scanning"
+        uses: github/codeql-action/upload-sarif@afb54ba388a7dca6ecae48f608c4ff05ff4cc77a # v3.25.15
+        with:
+         sarif_file: results.sarif          
