--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,9 +49,9 @@ jobs:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #     SONAR_HOST_URL: http://20.235.200.36:9000/
       #   run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=PetClinic -Dsonar.projectName='PetClinic'
-      # - name: Install Syft
-      #   run: |
-      #     curl -sSL https://github.com/anchore/syft/releases/download/v0.66.0/syft_0.66.0_linux_amd64.tar.gz | tar xz -C /usr/local/bin syft
+      - name: Install Syft
+        run: |
+         curl -sSL https://github.com/anchore/syft/releases/download/v0.66.0/syft_0.66.0_linux_amd64.tar.gz | tar xz -C /usr/local/bin syft
       # - name: Check SonarQube Quality Gate
       #   run: |
       #    sleep 10
